fixed names being cut off

--- a/css/styleDesktop.css
+++ b/css/styleDesktop.css
@@ -3,7 +3,10 @@
 * {
     padding: 0;
     margin: 0;
-    overflow: hidden; 
+}
+
+html{
+    overflow: hidden;
 }
 
 body {
