--- a/css/styleTablet.css
+++ b/css/styleTablet.css
@@ -3,8 +3,12 @@
 * {
     padding: 0;
     margin: 0;
-    overflow: hidden; 
 }
+
+html{
+    overflow: hidden;
+}
+
 
 body {
     background-color: rgb(99,210,151);
